<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world_label"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/button_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_01_label"/>

    <Button
        android:id="@+id/chat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_chat"/>

    <Button
        android:id="@+id/test_toolbar_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test Toolbar"/>

</LinearLayout>