<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:columnCount="2"
    android:rowCount="2">

    <RadioButton
        android:id="@+id/radio_button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/radio_button_label"
        android:layout_column="0"
        android:layout_row="0"/>

    <CheckBox
        android:id="@+id/checkbox01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/checkbox_label"
        android:layout_column="1"
        android:layout_row="0"/>

    <Switch
        android:id="@+id/switch01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/switch_label"
        android:layout_column="0"
        android:layout_row="1"/>

    <ImageButton
        android:id="@+id/image_button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:src="@drawable/camera_icon"
        android:layout_column="1"
        android:layout_row="1"/>

</GridLayout>